@@ -1,3 +1,9 @@
+2005-08-10  Michael Natterer  <mitch@gimp.org>
+
+	* app/dialogs/preferences-dialog.c (prefs_dialog_new): don't have
+	widgets from different pages in the same size group. Fixes spacing
+	on the "Display" page.
+
 2005-08-10  Sven Neumann  <sven@gimp.org>
 
 	* app/Makefile.am: fixed dist-dump-gimprc rule.
